[package]
name = "renostr"
description = "Reference implementation of reNostr NRPs"
authors = ["Dr. Maxim Orlovsky <orlovsky@cyphernet.io>"]
keywords = ["nostr", "privacy", "cypherpunk", "tor"]
categories = ["network-programming", "cryptography"]
homepage = "https://cyphernet.io"
repository = "https://github.com/reNostr/renotst.rs"
version = "0.1.0"
rust-version = "1.65"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
amplify = "4.0.0"
io-reactor = { version = "0.1.0", optional = true }
cyphernet = { version = "0.2.0", features = ["ed25519", "pem", "multibase", "noise_sha2", "noise_x25519", "noise-framework", "mixnets", "dns"] }
mio = { version = "0.8.5", optional = true }
socket2 = { version = "0.4.7", optional = true }
libc = "0.2.138"
log_crate = { package = "log", version = "0.4.17", optional = true }
rand = "0.8.5" # Used in SplitIo shared secret

[dev-dependencies]
cyphernet = { version = "0.2.0", features = ["ed25519"] }
log_crate = { package = "log", version = "0.4.17" }

[features]
default = ["reactor", "socket2"]
all = ["reactor", "connect_nonblocking", "mio", "log"]
reactor = ["io-reactor", "connect_nonblocking"]
connect_nonblocking = ["socket2"]
log = ["log_crate", "io-reactor/log"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
